2009-06-25  Jaroslav Hajek  <highegg@gmail.com>

	* unwind-prot.h (unwind_protect::elem): New polymorphic class.
	(unwind_protect::restore_var): Remove.
	(unwind_protect::restore_mem): Remove.
	(unwind_protect::elt_list): Update.
	(unwind_protect::add (elem *)): New method.
	(unwind_protect::add (void (*)(void *), void *)): Reimplement.
	(unwind_protect::run (void)): Rewrite.
	(unwind_protect::discard (void)): Rewrite.
	(unwind_protect::protect_var): Rewrite.
	(unwind_protect::protect_mem): Rewrite.
	(unwind_protect::add_action_var): New method.
	* unwind-prot.cc (unwind_protect::restore_mem): Remove.

2009-06-24  Thorsten Meyer  <thorsten.meyier@gmx.de>

	* oct-map.cc (Octave_map::squeeze, Octave_map::permute,
	Octave_map::transpose, Octave_map::reshape, Octave_map::concat,
	Octave_map::index): Add tests for preservation of key order in
	struct arrays.

2009-06-24  Jaroslav Hajek  <highegg@gmail.com>

	* pt-mat.cc (get_concat_class): Use empty string as zero value.
	(tm_row_const_rep::tm_row_const_rep): Initialize class_nm to empty
	string.
	(tm_const::tm_const): Ditto.

2009-06-24  John W. Eaton  <jwe@octave.org>

	* pt-assign.cc (former_built_in_variables): Remove "ans" from the list.

2009-06-24  Jaroslav Hajek  <highegg@gmail.com>

	* unwind-prot.h (restore_var, restore_mem): Hide also copy
	constructors.

2009-06-23  Jaroslav Hajek  <highegg@gmail.com>

	* quit.h (octave_quit_exception): Delete.
	(exit_status, quitting_gracefully): New globals.
	* quit.cc: Initialize them.
	(Fquit): Set the globals, simulate interrupt.
	(main_loop): Handle exit properly.
	* octave.cc (execute_eval_option_code): Ditto.
	(execute_command_line_file): Ditto.
	* pt-eval.cc (do_unwind_protect_cleanup_code):
	Fix order of unwind_protect calls.

2009-06-23  John W. Eaton  <jwe@octave.org>

	* oct-map.cc (Octave_map::squeeze, Octave_map::permute,
	Octave_map::transpose, Octave_map::reshape, Octave_map::concat):
	Preserve key order.

2009-06-23  Jaroslav Hajek  <highegg@gmail.com>
