@@ -3262,7 +3262,7 @@ parse_fcn_file (const std::string& ff, const std::string& dispatch_type,
 	  // the forced variables will be unmarked in the event of an
 	  // interrupt. 
 	  symbol_table::scope_id scope = symbol_table::top_scope ();
-	  unwind_protect::add (symbol_table::unmark_forced_variables, &scope);
+	  unwind_protect::add_action_var (symbol_table::unmark_forced_variables, scope);
 
 	  if (! help_txt.empty ())
 	    help_buf.push (help_txt);
