@@ -1,5 +1,14 @@
 2009-06-25  Jaroslav Hajek  <highegg@gmail.com>
 
+	* input.cc: Use unwind_protect::add_action_var where appropriate.
+	* ls-mat5.cc: Ditto.
+	* ov-fcn-handle.cc: Ditto.
+	* parse.y: Ditto.
+	* toplev.cc: Ditto.
+	* variables.cc: Ditto.
+
+2009-06-25  Jaroslav Hajek  <highegg@gmail.com>
+
 	* unwind-prot.h (unwind_protect::elem): New polymorphic class.
 	(unwind_protect::restore_var): Remove.
 	(unwind_protect::restore_mem): Remove.
